--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="index.html"></a></li>
-                    <li><a href="about.html"></a></li>
-                    <li><a href="contact.html"></a></li>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="contact.html">contact</a></li>
                 </ul>
             </nav>
         </header> 
@@ -24,6 +24,12 @@
         He is a playful buddies and likes when i pat his head.
     </p>
     <br></br>
-    <img src="/img/dog_img.jpg">
+    <img src="/img/dog_img.jpg" alt="cute_dog">
+    <p> We are giving him to adoption, and we are searching for caring people.
+        Who are willing to adopt this little guy and take care of him.
+        He is all vaccinated and healthy. We are looking for someone who has a yard and space for Leo as he likes to play and need space
+        He is a friendly and social bread who likes kids so, if you have kids Leo can be the perfect bestfriend.
+    </p>
+    <br></br>
 </body>
 </html>
