--- a/index.html
+++ b/index.html
@@ -21,15 +21,25 @@
     <h1>MY DOG LEO</h1>
     <p> He is a golden retriver of 8 months.
          He likes to play in the fields.
-        He is a playful buddies and likes when i pat his head.
+        He is a playful buddies and likes when I pat his head.
+        He hates when u wake him up in his while sleeping.
     </p>
     <br></br>
-    <img src="/img/dog_img.jpg" alt="cute_dog">
+    <img src="/img/dog_img.jpg" alt="cute_dog" width="150 px" height="150 px">
     <p> We are giving him to adoption, and we are searching for caring people.
         Who are willing to adopt this little guy and take care of him.
         He is all vaccinated and healthy. We are looking for someone who has a yard and space for Leo as he likes to play and need space
         He is a friendly and social bread who likes kids so, if you have kids Leo can be the perfect bestfriend.
     </p>
     <br></br>
+    <h2> important notes</h2>
+    <p>He should be given a bath twice a week and taken good care.
+        He must have at least a 1 hour walk 4 times a week and make sure that he is well fed.
+    </p>
+    <p>If you are interested with adopting Leo,you find find all the details on the top corner side of the webpage.
+        You can contact me on this contact info below:
+    </p>
+     <br></br>
+     <input type="+1 266 999 999">
 </body>
 </html>
